# jupyterlab-extension

./: .copier-answers.yml  .coveragerc  .dockerignore  .eslintrc.js  .flake8  .gitignore  .gitmodules  .prettierignore  .prettierrc  .pylintrc  AUTHORS.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.centos  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  jest.config.js  jhub_oidc_auth.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json  tsconfig.test.json
.github/: dependabot.yml
.github/workflows/: build-and-publish-tagged.yml  build.yml  check-release.yml  publish-to-pypi.yml  test.yml
_temp_extension/: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  package.json
_temp_extension/rucio_jupyterlab/: __init__.py  handlers.py
_temp_extension/src/: index.ts
docker/: configure.py  configure.sh
docker/container/: Dockerfile  README.md  configure.py  configure.sh  docker-entrypoint.sh  install_extension.sh  jupyter_server_config.json  jupyter_server_config.py  start_notebook.sh
docker/test_env/: README.md  docker-compose-extension.yml  run_test_env.sh  stop_test_env.sh
jupyter-config/jupyter_server_config.d/: rucio_jupyterlab.json
jupyter-config/nb-config/: rucio_jupyterlab.json
rucio-jupyterlab/: LICENSE  package.json
rucio-jupyterlab/jupyter-config/: rucio_jupyterlab.json
rucio-jupyterlab/rucio_jupyterlab/: __init__.py
rucio-jupyterlab/src/: index.ts  rucio-jupyterlab.ts
rucio_jupyterlab/: .flake8  .pep8  __init__.py  _version.py  db.py  entity.py  handlers.py  logging_config.py  metrics.py  schema.py  server.py  utils.py
rucio_jupyterlab/config/: __init__.py  config.py  schema.py
rucio_jupyterlab/handlers/: __init__.py  auth_config.py  base.py  bookmarks.py  did_browser.py  did_details.py  did_make_available.py  did_search.py  example.py  file_browser.py  file_details.py  file_make_available.py  handlers.py  instances.py  list_rses.py  list_scopes.py  oidc_auth_check.py  oidc_auth_enabled.py  open_replication_rule.py  purge_cache.py  upload.py  upload_jobs.py  upload_jobs_details.py  upload_jobs_log.py
rucio_jupyterlab/mode_handlers/: download.py  replica.py
rucio_jupyterlab/rucio/: __init__.py  authenticators.py  client_environment.py  download.py  exceptions.py  rucio.py  upload.py  utils.py
rucio_jupyterlab/tests/: conftest.py  test_config.py  test_db.py  test_did_details.py  test_handler_auth_config.py  test_handler_did_browser.py  test_handler_did_search.py  test_handler_file_browser.py  test_handler_instances.py  (+11 more)
src/: ExtensionStore.ts  InjectNotebookToolbar.tsx  Panel.tsx  PanelExtension.tsx  SidebarPanel.tsx  const.ts  handler.ts  index.ts  types.ts
style/: index.css
test_env/: README.md  docker-compose-extension.yml  run_jupyterlab_container.sh  run_test_env.sh  stop_test_env.sh
tests/: Actions.test.ts  ApiRequest.test.ts  Helpers.test.ts
ui-tests/: package.json
(+98 files in other folders)
